--- a/pages/components/template3/css/LocationMap.module.css
+++ b/pages/components/template3/css/LocationMap.module.css
@@ -6,11 +6,13 @@
   background: linear-gradient(135deg, #f9f9f9 50%, #e3f954 50%);
   padding: 4rem 2rem;
   border-radius: 0;
-  clip-path: polygon(0 0, 100% 5%, 100% 95%, 0 100%);
+  /* clip-path: polygon(0 0, 100% 5%, 100% 95%, 0 100%); */
   display: flex;
   flex-direction: column;
   gap: 4rem;
 }
+
+
 
 /* Map Section */
 .mapSection {
