--- a/pages/components/template1/css/EnquirePopup.module.css
+++ b/pages/components/template1/css/EnquirePopup.module.css
@@ -102,7 +102,7 @@
 }
 
 .thankYouContent {
-  background: white;
+  background: rgb(0, 0, 0);
   padding: 20px;
   border-radius: 8px;
   text-align: center;
@@ -111,10 +111,12 @@
 
 .thankYouContent h2 {
   margin-bottom: 10px;
+  color: floralwhite;
 }
 
 .thankYouContent p {
   margin-bottom: 20px;
+  color: floralwhite;
 }
 
 .thankYouContent button {
