--- a/pages/components/template4/css/EnquirePopup.module.css
+++ b/pages/components/template4/css/EnquirePopup.module.css
@@ -14,7 +14,6 @@
 }
 
 .enquirePopupContent {
-  position: relative; /* This ensures the close button is positioned relative to this container */
   background: #ffffff;
   width: 90%;
   max-width: 500px;
@@ -28,22 +27,14 @@
 
 .enquirePopupClose {
   position: absolute;
-  top: 10px; /* Adjust the distance from the top */
-  right: 10px; /* Adjust the distance from the right */
+  top: 10px;
+  right: 10px;
   background: none;
   border: none;
   font-size: 1.5rem;
   cursor: pointer;
-  color: #666; /* Color of the close icon */
-  transition: color 0.3s ease;
+  color: #666;
 }
-
-.enquirePopupClose:hover {
-  color: #222; /* Darker color when hovered */
-}
-
-
-
 
 .enquirePopupLogo {
   width: 120px;
@@ -108,11 +99,10 @@
 }
 
 .thankYouContent {
-  background: #000000;
+  background: #ffffff;
   width: 90%;
   max-width: 400px;
   border-radius: 10px;
-  color: #ffffff;
   text-align: center;
   padding: 2rem;
   animation: fadeIn 0.3s ease-in-out;
