--- a/pages/components/template3/css/HeroBanner.module.css
+++ b/pages/components/template3/css/HeroBanner.module.css
@@ -36,7 +36,7 @@
 .heroLocation {
   font-family: "Roboto", sans-serif;
   font-size: 1.2rem;
-  margin-bottom: 3px;
+  /* margin-bottom: 3px; */
   color: #ddd;
 }
 
@@ -54,6 +54,7 @@
   border: none;
   border-radius: 3px;
   cursor: pointer;
+  margin-top: 20px;
   transition: transform 0.3s ease, background 0.3s ease;
 }
 
