--- a/pages/components/template4/css/Header.module.css
+++ b/pages/components/template4/css/Header.module.css
@@ -38,6 +38,7 @@
   display: flex;
   gap: 20px;
   z-index: 5;
+  margin-right: 30px;
 }
 
 .navMenu ul {
@@ -204,6 +205,7 @@
     display: block;
     z-index: 1000;
     cursor: pointer;
+    margin-right: 30px;
   }
 
   .clipPath {
