--- a/pages/components/template5/css/Footer.module.css
+++ b/pages/components/template5/css/Footer.module.css
@@ -11,7 +11,7 @@
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  /* gap: 1.5rem; */
   text-align: center;
 }
 
@@ -46,17 +46,18 @@
 
 /* Bottom Section */
 .footerBottom {
-  text-align: center;
+  text-align: justify;
   border-top: 1px solid rgba(255, 255, 255, 0.2);
   padding-top: 1rem;
+
 }
 
 .footerDisclaimer,
 .footerAgentRera,
 .footerCopyright {
   font-size: 0.9rem;
-  margin: 0.3rem 0;
-  line-height: 1.4;
+  /* margin: 0.3rem 0; */
+  /* line-height: 1.4; */
 }
 
 /* Privacy Policy Link */
@@ -64,7 +65,7 @@
   font-size: 0.9rem;
   color: #ff5722;
   text-decoration: none;
-  margin-top: 1rem;
+  /* margin-top: 1rem; */
   display: inline-block;
 }
 
