--- a/pages/components/template5/css/HeroBanner.module.css
+++ b/pages/components/template5/css/HeroBanner.module.css
@@ -113,3 +113,36 @@
     font-size: 0.8rem; /* Smaller font size for button */
   }
 }
+
+.videoLoader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 1.5rem;
+  font-weight: bold;
+  z-index: 10;
+  text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.7);
+}
+
+.videoWrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.heroBanner {
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.heroVideo {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
