--- a/pages/components/template6/css/Header.module.css
+++ b/pages/components/template6/css/Header.module.css
@@ -72,6 +72,7 @@
   font-weight: 600;
   cursor: pointer;
   transition: all 0.3s ease;
+  text-align: center;
 }
 
 .callButton:hover,
@@ -116,11 +117,13 @@
   .navMenu ul {
     flex-direction: column;
     gap: 20px;
+    margin-left: -50px;
   }
 
   .cta {
     flex-direction: column;
     gap: 15px;
+    /* align-items: end; */
   }
 
   .hamburger {
