--- a/pages/components/template5/css/MasterPlan.module.css
+++ b/pages/components/template5/css/MasterPlan.module.css
@@ -76,16 +76,16 @@
   right: 0;
   bottom: 0;
   background: rgba(0, 0, 0, 0.5);
-  opacity: 0;
-  transition: opacity 0.3s ease;
+  opacity: 1;
+  /* transition: opacity 0.3s ease; */
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.card:hover .overlay {
+/* .card:hover .overlay {
   opacity: 1;
-}
+} */
 
 .text {
   color: #fff;
@@ -198,13 +198,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  opacity: 0;
+  opacity: 1;
   transition: opacity 0.3s ease;
 }
 
-.imageContainer:hover .overlay {
+/* .imageContainer:hover .overlay {
   opacity: 1;
-}
+} */
 
 .requestButton {
   background-color: #ff5722;
